--- a/rollup/core/classes/RollupCalcItemSorter.cls
+++ b/rollup/core/classes/RollupCalcItemSorter.cls
@@ -33,12 +33,8 @@ public without sharing class RollupCalcItemSorter implements System.Comparator<S
 
   private List<RollupOrderBy__mdt> initializeOrderByOptions(List<RollupOrderBy__mdt> orderByOptions) {
     for (RollupOrderBy__mdt orderByOption : orderByOptions) {
-      if (orderByOption.NullSortOrder__c == null) {
-        orderByOption.NullSortOrder__c = RollupMetaPicklists.NullSortOrder.NullsFirst;
-      }
-      if (orderByOption.SortOrder__c == null) {
-        orderByOption.SortOrder__c = RollupMetaPicklists.SortOrder.Ascending;
-      }
+      orderByOption.NullSortOrder__c = orderByOption.NullSortOrder__c ?? RollupMetaPicklists.NullSortOrder.NullsFirst;
+      orderByOption.SortOrder__c = orderByOption.SortOrder__c ?? RollupMetaPicklists.SortOrder.Ascending;
     }
     return orderByOptions;
   }
